Mise a jour des lien et ceo

--- a/pages/logiciel_creations_site_web.html
+++ b/pages/logiciel_creations_site_web.html
@@ -2,7 +2,11 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index,follow">
+    <meta name="description" content="Retrouver la séléction des meilleur logiciel pour développer vos site web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="../images/ICONE_laurent_jordan_dev_web.png" />
+    <link rel="icon" href="../images/ICONE_laurent_jordan_dev_web.png" />
     <title>Laurent Jordan - Dev web</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
