--- a/pages/mon_parcours.html
+++ b/pages/mon_parcours.html
@@ -2,7 +2,11 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index,follow">
+    <meta name="description" content="Mon parcours en tant que développeur web , mes etude chez Openclassrooms...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="../images/ICONE_laurent_jordan_dev_web.png" />
+    <link rel="icon" href="../images/ICONE_laurent_jordan_dev_web.png" />
     <title>Laurent Jordan - Dev web</title>
     <script src="https://kit.fontawesome.com/9d71f1e47f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
