--- a/tutoriel.html
+++ b/tutoriel.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
+    <meta name="robots" content="index,follow">
+    <meta name="description" content="Apprener le développement web de zéro ! Accedez a des dizaines de tutoriel pour apprendre le développement">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laurent Jordan - Dev web</title>
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/ICONE_laurent_jordan_dev_web.png" />
+    <link rel="icon" href="images/ICONE_laurent_jordan_dev_web.png" />
+    <title>Laurent Jordan - tutoriel</title>
     <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -14,15 +18,15 @@
     <!--Barre de navigation-->
     <header class="blog-header py-3">
       <div class=" text-center">
-      <a class="blog-header-logo text-dark" href="../index.html">
+      <a class="blog-header-logo text-dark" href="index.html">
           <h1> < Apprentie Developpeur Web /> </h1></a>
     </div>   
 </header>
     <div class="nav-scroller py-1 mb-2">
       <nav class="nav d-flex justify-content-center">
-          <a class="h5 text-dark bounce-top p-2" href="../pages/logiciel_creations_site_web.html">Logiciel création site web <span class="sr-only">(current)</span></a>
-          <a class=" h5 text-dark bounce-top p-2" href="../blog/_site/index.html">Tutoriel </a>
-          <a class=" h5 text-dark bounce-top p-2" href="../pages/mon_parcours.html">Mon parcours</a>
+          <a class="h5 text-dark bounce-top p-2" href="pages/logiciel_creations_site_web.html">Logiciel création site web <span class="sr-only">(current)</span></a>
+          <a class=" h5 text-dark bounce-top p-2" href="index.html">Tutoriel </a>
+          <a class=" h5 text-dark bounce-top p-2" href="pages/mon_parcours.html">Mon parcours</a>
       </nav> 
    </div>
 
