correction lien du logo de la navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="blog-header py-3 bg-dark">
             <div class=" text-center">
             <a class="blog-header-logo text-light" href="index.html">
-                <img src="../images/Web-Facile-logo.png" class="tracking-in-expand  img-fluid" alt="loggo web facile laurent jordan"> </img></a>
+                <img src="images/Web-Facile-logo.png" class="tracking-in-expand  img-fluid" alt="loggo web facile laurent jordan"> </img></a>
           </div>   
       </header>
       <div class="nav-scroller py-1 pb-2 bg-warning">
